# PCNS_VOC

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: tank_farm.synthetic.yaml
docs/: DATA_GOVERNANCE.md  DECISIONS.md  HYPOTHESIS.md
scripts/: 02_build_scenario.py  04_generate_training_data.py
src/tankloss/: __init__.py
src/tankloss/data/: __init__.py  scenario.py  training.py
src/tankloss/physics/: __init__.py  fixed_roof.py  floating_roof.py
src/tankloss/properties/: __init__.py  ap42.py
tests/: test_fixed_roof_ap42_example1.py  test_floating_roof_ap42_examples.py  test_properties_ap42.py  test_scenario_pipeline.py  test_training_data_pipeline.py
